Copy, paste and alter slightly accommodation routes to get seeking routes
