# backend/openapi.yaml
@@ -454,7 +454,7 @@ components:
             $ref: "#/components/schemas/distance"
           isFavourite:
             $ref: "#/components/schemas/isFavourite"
-          accommodation:
+          seeking:
             $ref: "#/components/schemas/seekingSummary"
 
     accommodationDetails:
@@ -602,6 +602,7 @@ components:
         - id
         - title
         - shortDescription
+        - locationName
       properties:
         id:
           $ref: "#/components/schemas/listingId"
@@ -611,6 +612,8 @@ components:
           $ref: "#/components/schemas/listingShortDescription"
         thumbnailUrl:
           $ref: "#/components/schemas/listingThumbnailUrl"
+        locationName:
+          type: string
 
     seekingDetails:
       type: object
